[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
authors = [
  { name = "Grace" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv>=0.1.13"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
